--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Pain</title>
+    <style>
+        .btn {
+            border: 2px dotted;
+            font: 600 20px monospace;
+            outline: none;
+            background: #fff;
+        }
+    </style>
 </head>
 <body>
     
