--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script>
         document.querySelector(".btn").addEventListener("click", (e) => {
-            e.target.borderColor = `rgb(${getColor()},${getColor()},${getColor()})`;
+            e.target.style.borderColor = `rgb(${getColor()},${getColor()},${getColor()})`;
         })
     </script>
 
